--- a/my_second_app/package.json
+++ b/my_second_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_second_app",
+  "name": "app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,19 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.11",
+    "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@ui-kitten/components": "^5.1.2",
     "add": "^2.0.6",
+    "expo": "^45.0.6",
+    "expo-font": "^10.1.0",
     "react": "17.0.2",
-    "react-native": "0.66.2",
+    "react-native": "0.68.2",
     "react-native-chart-kit": "^6.11.0",
     "react-native-restart": "^0.0.22",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.9.0",
-    "react-native-shared-element": "^0.7.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-webview": "^11.14.3",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-shared-element": "0.8.4",
+    "react-native-svg": "^12.3.0",
+    "react-native-webview": "11.18.1",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "remove": "^0.1.5"
   },
